# b3dm-cpp

./: .clang-format  .clang-tidy  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  README_8md.html  about.html  about_8dox.html  annotated.html  binary__file_8h.html  binary__readonly__stream_8h.html  classb3dm_1_1decoder.html  classb3dm_1_1exceptions_1_1incorrect__format.html  classb3dm_1_1exceptions_1_1reader__exception.html  classb3dm_1_1streams_1_1binary__file.html  classb3dm_1_1streams_1_1binary__readonly__stream.html  decoder_8h.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_c4aaf15c058dd2bc04e229838686600b.html  dir_ef3b2545113449f8f25e623a543d64e3.html  files.html  format__exception_8h.html  index.html  modules.html  namespaceb3dm.html  namespaceb3dm_1_1constants.html  namespaceb3dm_1_1exceptions.html  namespaceb3dm_1_1streams.html  namespaces.html  namespacestd.html  pages.html  reader__exception_8h.html  searchdata-v1.js  structb3dm_1_1body.html  structb3dm_1_1header.html
.github/workflows/: ci.yml
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt  extract_glb_example.cpp  read_body_example.cpp  read_header_example.cpp
include/b3dm-cpp/: binary_file.h  binary_readonly_stream.h  decoder.h  file.h  format_exception.h  reader_exception.h  stream.h  stream_interface.h
source/: binary_file.cpp  decoder.cpp  file.cpp
test/: CMakeLists.txt
test/source/: b3dm-cpp_test.cpp  binary_file_test.cpp
